--- a/css/formatting.css
+++ b/css/formatting.css
@@ -76,6 +76,6 @@
     }
 
     p {
-        font-size: 0.5em;
+        font-size: 0.8em;
     }
 }
